# bnn

./: .gitignore  Cargo.toml  LICENSE  readme.md  rustfmt.toml  seed_accs.txt  setup.sh  status.md
.cargo/: config.toml
benches/: bit_perf.rs
params/: full_model_e2e.prms
results/: word_perf_c6g.metal  word_perf_c6i.32xlarge.json
shaders/: conv2x2_1-1.glsl  conv2x2_1-2.glsl  conv2x2_1-3.glsl  conv2x2_2-1.glsl  conv2x2_2-2.glsl  conv2x2_2-3.glsl  conv2x2_3-1.glsl  conv2x2_3-2.glsl  conv2x2_3-3.glsl  conv2x2_4-1.glsl  conv2x2_4-2.glsl  conv2x2_4-3.glsl  conv3x3_1-1.glsl  conv3x3_1-2.glsl  conv3x3_1-3.glsl  conv3x3_2-1.glsl  conv3x3_2-2.glsl  conv3x3_2-3.glsl  conv3x3_3-1.glsl  conv3x3_3-2.glsl  conv3x3_3-3.glsl  conv3x3_4-1.glsl  conv3x3_4-2.glsl  conv3x3_4-3.glsl  conv3x3_n-n.glsl  conv_patch_n-n.glsl  expand_shaders.sh  fast_mirror_cache_replace_input.glsl  fast_mirror_cache_replace_input_e1.glsl  fast_mirror_cache_replace_input_e2.glsl  fast_mirror_cache_replace_input_e3.glsl  fast_mirror_cache_replace_input_e4.glsl  fast_mirror_embedding_bit_clean.glsl  fast_mirror_embedding_bit_clean_e1.glsl  fast_mirror_embedding_bit_clean_e2.glsl  fast_mirror_embedding_bit_clean_e3.glsl  fast_mirror_embedding_bit_clean_e4.glsl  fast_mirror_head_update.glsl  fast_mirror_head_update_e1.glsl  fast_mirror_head_update_e2.glsl  (+38 more)
src/: bench.rs  bits.rs  bitslice.rs  block.rs  cache.rs  cluster.rs  count.rs  count_bits.rs  datasets.rs  descend.rs  ecc.rs  float.rs  image2d.rs  layer.rs  layers.rs  lib.rs  main.rs  mask.rs  matrix.rs  random_tables.rs  search.rs  shape.rs  unary.rs  weight.rs
vulkano_demo/: Cargo.toml
vulkano_demo/shaders/: patch_apply.glsl  patch_apply_2-1.glsl  patch_apply_n_input.glsl
vulkano_demo/src/: lib.rs
